[gd_scene load_steps=15 format=3 uid="uid://bgx0w5h0ujbnh"]

[ext_resource type="Texture2D" uid="uid://bcg7apkg42a1p" path="res://ressources/art/fireball.png" id="1_70yn7"]
[ext_resource type="Script" path="res://fireball.gd" id="1_es7oc"]
[ext_resource type="AudioStream" uid="uid://co13dkuchnb4h" path="res://ressources/sound/fireball.wav" id="3_1m37m"]
[ext_resource type="AudioStream" uid="uid://djs1b2f1psktg" path="res://ressources/sound/hit.wav" id="4_xhvxn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mripp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24d7k"]
atlas = ExtResource("1_70yn7")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d3w7"]
atlas = ExtResource("1_70yn7")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipkgg"]
atlas = ExtResource("1_70yn7")
region = Rect2(72, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a86v4"]
atlas = ExtResource("1_70yn7")
region = Rect2(108, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ev15"]
atlas = ExtResource("1_70yn7")
region = Rect2(144, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsi2f"]
atlas = ExtResource("1_70yn7")
region = Rect2(180, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnjq"]
atlas = ExtResource("1_70yn7")
region = Rect2(216, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh2nb"]
atlas = ExtResource("1_70yn7")
region = Rect2(252, 0, 36, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1f6s6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24d7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d3w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipkgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a86v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ev15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsi2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofnjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh2nb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Fireball" type="Area2D" groups=["fireball"]]
script = ExtResource("1_es7oc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.24249e-05, 3.8147e-06)
rotation = -1.5708
shape = SubResource("CircleShape2D_mripp")

[node name="Fireball" type="AnimatedSprite2D" parent="."]
z_index = 200
position = Vector2(-9, 1)
sprite_frames = SubResource("SpriteFrames_1f6s6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1m37m")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xhvxn")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_finished"]
